<resources>
    <string name="app_name">FlickPick</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_new">New here?</string>
    <string name="action_register">Register new account</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings related to login -->
    <string name="title_activity_register">Register a new account</string>
    <string name="action_new_account">Create new account</string>
</resources>