...
                android:layout_weight="1" />

        <Button
                android:text="@string/action_sign_in"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:id="@+id/start_sign_in"
                android:layout_marginTop="16dp"
                android:backgroundTint="?colorSecondary"
                android:textColor="?colorOnSecondary"
                android:layout_weight="1" />

        <Button
...
