...
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/default_username"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/navUsername" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_email"
            android:id="@+id/navEmail" />

</LinearLayout>
